<resources>
    <string name="app_name">soundify-musicplayer</string>
    <string name="player_minimize">Minimize</string>
    <string name="player_follow">Follow</string>
    <string name="player_following">Following</string>
    <string name="player_previous">Previous</string>
    <string name="player_play">Play</string>
    <string name="player_pause">Pause</string>
    <string name="player_next">Next</string>
    <string name="player_like">Like</string>
    <string name="player_liked">Liked</string>
    <string name="player_comment">Comment</string>
    <string name="player_add_to_playlist">Add to Playlist</string>
    <string name="player_queue">Queue</string>
    <string name="player_share">Share</string>
    <string name="time_format" formatted="false">%d:%02d</string>
    <string name="time_zero">0:00</string>
    <string name="duration_unknown">--:--</string>
    <string name="comment_hint">Add a comment…</string>
    <string name="comment_post">Post</string>
    <string name="comment_count">%d comments</string>
    <string name="comment_count_single">1 comment</string>
    <string name="comment_count_none">No comments</string>
    <string name="comments_title">Comments</string>
    <string name="comments_empty">No comments yet</string>
    <string name="comments_empty_subtitle">Be the first to comment on this song</string>
    <string name="cd_comment_like_button">Like comment</string>
    <string name="comment_likes_count">%d likes</string>
    <string name="comment_likes_count_single">1 like</string>
    <string name="comment_time_ago">%s ago</string>
    <string name="just_now">Just now</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="days_ago">%d days ago</string>
    <string name="mini_player_expand">Expand player</string>
    <string name="cd_mini_player_play_pause">Play or pause</string>
    <string name="cd_mini_player_next">Next track</string>
    <string name="cd_mini_player_expand">Expand to full player</string>
    <string name="cd_mini_player_close">Close mini player</string>
    <string name="menu_user_profile">User Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search songs, artists, playlists...</string>
    <string name="search_filter_all">All</string>
    <string name="search_filter_songs">Songs</string>
    <string name="search_filter_artists">Artists</string>
    <string name="search_filter_playlists">Playlists</string>
    <string name="search_empty_title">No results found</string>
    <string name="search_empty_subtitle">Try searching for something else</string>
    <string name="search_empty_query_title">Start searching</string>
    <string name="search_empty_query_subtitle">Search for songs, artists, and playlists</string>
    <string name="search_loading">Searching...</string>
    <string name="search_results_count">%d results</string>
    <string name="search_results_count_single">1 result</string>
    <string name="cd_clear_search">Clear search</string>
    <string name="action_follow_user">Follow %s</string>
    <string name="action_unfollow_user">Unfollow %s</string>
    <string name="action_like_song">Like song</string>
    <string name="action_unlike_song">Unlike song</string>
    <string name="action_add_comment">Add comment</string>
    <string name="action_view_comments">View comments</string>
    <string name="cd_album_art">Album artwork</string>
    <string name="cd_minimize_player">Minimize player</string>
    <string name="cd_follow_button">Follow artist</string>
    <string name="cd_play_button">Play/Pause</string>
    <string name="cd_previous_button">Previous track</string>
    <string name="cd_next_button">Next track</string>
    <string name="cd_like_button">Like song</string>
    <string name="cd_comment_button">View comments</string>
    <string name="cd_playlist_button">Add to playlist</string>
    <string name="cd_queue_button">View queue</string>
    <string name="error_loading_song">Error loading song</string>
    <string name="error_follow_user">Error following user</string>
    <string name="error_add_comment">Error adding comment</string>
    <string name="error_like_song">Error liking song</string>
    <string name="toast_followed_user">Following %s</string>
    <string name="toast_unfollowed_user">Unfollowed %s</string>
    <string name="toast_liked_song">Liked song</string>
    <string name="toast_unliked_song">Removed from liked songs</string>
    <string name="toast_comment_added">Comment added</string>
    <string name="toast_added_to_playlist">Added to playlist</string>
    <string name="upload_song_title">Upload Song</string>
    <string name="edit_song_title">Edit Song</string>
    <string name="select_cover_art">Chọn ảnh bìa (tùy chọn)</string>
    <string name="select_audio_file">Chọn file Audio (.mp3)</string>
    <string name="song_title_hint">Tiêu đề bài hát</string>
    <string name="song_description_hint">Mô tả</string>
    <string name="song_genre_hint">Thể loại</string>
    <string name="song_visibility_public">Công khai</string>
    <string name="button_save">Lưu</string>
    <string name="button_delete">Xóa</string>
    <string name="button_cancel">Hủy</string>
    <string name="no_file_selected">No file selected</string>
    <string name="song_title">Song Title</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="genre">Genre</string>
    <string name="cd_waveform">Audio waveform</string>
    <string name="make_public">Make Public</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="saving">Saving...</string>
    <string name="song_saved_successfully">Song saved successfully</string>
    <string name="delete_song">Delete Song</string>
    <string name="delete_song_confirmation">Are you sure you want to delete this song? This action cannot be undone.</string>
    <string name="error_no_audio_file">Vui lòng chọn file audio</string>
    <string name="error_no_title">Vui lòng nhập tiêu đề bài hát</string>
    <string name="error_title_too_long">Tiêu đề quá dài (tối đa 100 ký tự)</string>
    <string name="error_description_too_long">Mô tả quá dài (tối đa 500 ký tự)</string>
    <string name="toast_song_saved">Bài hát đã được lưu</string>
    <string name="toast_song_updated">Bài hát đã được cập nhật</string>
    <string name="toast_song_deleted">Bài hát đã được xóa</string>
    <string name="error_saving_song">Lỗi khi lưu bài hát</string>
    <string name="error_updating_song">Lỗi khi cập nhật bài hát</string>
    <string name="error_deleting_song">Lỗi khi xóa bài hát</string>
    <string name="delete_song_title">Xóa bài hát</string>
    <string name="delete_song_message">Bạn có chắc chắn muốn xóa bài hát này? Hành động này không thể hoàn tác.</string>
    <string name="delete_confirm">Xóa</string>
    <string-array name="genre_array">
        <item>Pop</item>
        <item>Rock</item>
        <item>Hip Hop</item>
        <item>Electronic</item>
        <item>Classical</item>
        <item>Jazz</item>
        <item>R&amp;B</item>
        <item>Country</item>
        <item>Folk</item>
        <item>Blues</item>
        <item>Reggae</item>
        <item>Khác</item>
    </string-array>
    <string name="playlist_detail_title">Playlist Detail</string>
    <string name="playlist_songs_count">%d songs</string>
    <string name="playlist_songs_count_single">1 song</string>
    <string name="playlist_songs_count_none">No songs</string>
    <string name="playlist_total_duration">%s total</string>
    <string name="playlist_created_by">Created by %s</string>
    <string name="playlist_public">Public</string>
    <string name="playlist_private">Private</string>
    <string name="action_play_all">Play All</string>
    <string name="action_shuffle_play">Shuffle</string>
    <string name="action_edit_playlist">Edit Playlist</string>
    <string name="action_add_songs">Add Songs</string>
    <string name="action_remove_song">Remove from playlist</string>
    <string name="action_move_up">Move up</string>
    <string name="action_move_down">Move down</string>
    <string name="playlist_empty_message">This playlist is empty</string>
    <string name="playlist_empty_subtitle">Add some songs to get started</string>
    <string name="toast_song_removed">Song removed from playlist</string>
    <string name="toast_song_moved">Song position updated</string>
    <string name="toast_playlist_updated">Playlist updated</string>
    <string name="error_loading_playlist">Error loading playlist</string>
    <string name="error_updating_position">Error updating song position</string>
    <string name="remove_song_title">Remove Song</string>
    <string name="remove_song_message">Remove \"%s\" from this playlist?</string>
    <string name="remove_confirm">Remove</string>
    <string name="cd_playlist_cover">Playlist cover art</string>
    <string name="cd_play_all_button">Play all songs</string>
    <string name="cd_shuffle_button">Shuffle play</string>
    <string name="cd_edit_playlist_button">Edit playlist</string>
    <string name="cd_add_songs_button">Add songs to playlist</string>
    <string name="cd_song_menu">Song options</string>
    <string name="cd_drag_handle">Drag to reorder</string>
    <string name="user_profile_title">Profile</string>
    <string name="user_profile_follow">Follow</string>
    <string name="user_profile_unfollow">Unfollow</string>
    <string name="user_profile_following">Following</string>
    <string name="user_profile_edit_profile">Edit Profile</string>
    <string name="search_follow">Follow</string>
    <string name="search_following">Following</string>
    <string name="search_unfollow">Unfollow</string>
    <string name="search_followed_user">Now following %s</string>
    <string name="search_unfollowed_user">Unfollowed %s</string>
    <string name="search_error_follow_action">Error updating follow status</string>
    <string name="search_error_not_logged_in">Please log in to follow users</string>
    <string name="search_error_cannot_follow_self">Cannot follow yourself</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="profile_songs">Songs</string>
    <string name="profile_followers_count">%d followers</string>
    <string name="profile_followers_count_single">1 follower</string>
    <string name="profile_followers_count_none">No followers</string>
    <string name="profile_following_count">%d following</string>
    <string name="profile_following_count_single">1 following</string>
    <string name="profile_following_count_none">Not following anyone</string>
    <string name="profile_songs_count">%d songs</string>
    <string name="profile_songs_count_single">1 song</string>
    <string name="profile_songs_count_none">No songs</string>
    <string name="tab_songs">Songs</string>
    <string name="tab_playlists">Playlists</string>
    <string name="profile_no_songs_title">No public songs</string>
    <string name="profile_no_songs_subtitle">This user hasn\'t shared any songs yet</string>
    <string name="profile_no_playlists_title">No public playlists</string>
    <string name="profile_no_playlists_subtitle">This user hasn\'t shared any playlists yet</string>
    <string name="profile_own_no_songs_title">You haven\'t shared any songs</string>
    <string name="profile_own_no_songs_subtitle">Upload and make your songs public to share them</string>
    <string name="profile_own_no_playlists_title">You haven\'t shared any playlists</string>
    <string name="cancel">Cancel</string>
    <string name="edit_playlist_title">Edit Playlist</string>
    <string name="playlist_name_hint">Playlist name</string>
</resources>